[HP] Add title and date to blogs, plus fix images in posts being too wide.

--- a/assets/css/bm.css
+++ b/assets/css/bm.css
@@ -115,6 +115,12 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 1em;
 }
 
+.bm-content-area img {
+	display: block;
+	margin: 0 auto;
+	max-width: 50%;
+}
+
 .bm-content-area-inner {
 	width: 100%;
 }
